--- a/admin/ajax-remote.html
+++ b/admin/ajax-remote.html
@@ -3,30 +3,21 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>URL-Route</title>
+<title>AJAX-Remote</title>
 <link rel="stylesheet" href="src/css/main.css" />
 </head>
 <body class="skin-blue sidebar-mini">
 <div class="wrapper">
     <div class="content-wrapper content-inner">
         <section class="content-header">
-            <h1>URL-Route<small>Configure URL routing</small></h1>
+            <h1>AJAX-Remote<small>Proxy Ajax to remote server</small></h1>
         </section>
         <div class="content">
             <div class="box box-primary">
                 <div class="box-body">
                     <table class="table table-bordered table-hover">
-                        <thead>
-                            <tr>
-                                <th>URL</th>
-                                <th>origin</th>
-                            </tr>
-                        </thead>
                         <tbody id="list">
-                            <tr>
-                                <td><input type="text" placeholder="e.g. /user/home" class="form-control"></td>
-                                <td><input type="text" placeholder="e.g. /html/user/home/main.html" class="form-control"></td>
-                            </tr>
+                            <tr><td><input type="text" placeholder="e.g. /api/login/info.do" class="form-control"></td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -45,37 +36,29 @@ var $list = $('#list');
 var fsconfig = {};
 $.get('/fsconfig.json', function(data){
     fsconfig = data;
-    var route = data.route;
+    var arr = data.proxyArr;
     var trList = '';
-    for(var url in route){
+    arr.forEach(function(url){
         trList += '<tr>'+
-            '<td><input type="text" value="'+ url +'" placeholder="e.g. /user/home" class="form-control"></td>'+
-            '<td><input type="text" value="'+ route[url] +'" placeholder="e.g. /html/user/home/main.html" class="form-control"></td>'+
+            '<td><input type="text" value="'+ url +'" placeholder="e.g. /api/login/info.do" class="form-control"></td>'+
         '</tr>';
-    }
+    });
 
     $list.prepend(trList);
 },'json');
 
 $('#add').on('click',function(){
-    $list.append('<tr>'+
-        '<td><input type="text" placeholder="e.g. /user/home" class="form-control"></td>'+
-        '<td><input type="text" placeholder="e.g. /html/user/home/main.html" class="form-control"></td>'+
-    '</tr>');
+    $list.append('<tr><td><input type="text" placeholder="e.g. /api/login/info.do" class="form-control"></td></tr>');
 });
 
 $('#save').on('click', function(){
-    var data = {}, cont;
+    var arr = [], cont;
     $list.find('tr').each(function(){
-        var $input = $(this).find('input');
-        var url = $input[0].value;
-        var origin = $input[1].value;
-        if(url && origin){
-            data[url] = origin;
-        }
+        var url = $(this).find('input').val();
+        url && arr.push(url);
     });
-    fsconfig.route = data;
-    if(confirm('Confirm the following data:\n' + JSON.stringify(data, null, 4))){
+    fsconfig.proxyArr = arr;
+    if(confirm('Confirm the following data:\n' + JSON.stringify(arr, null, 4))){
         $.post('/fsapi/savefile',{
             path: '/fsconfig.json',
             cont: JSON.stringify(fsconfig, null, 4)
