--- a/admin/json-edit.html
+++ b/admin/json-edit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -54,6 +53,8 @@ var editor = new JSONEditor(container,options);
 $('#load').on('click', function(){
     $.get(jsonUrl.value, function(data){
         editor.set(data);
+    }).error(function(){
+        alert('Error. Please check the path');
     });
 });
 $('#clear').on('click', function(){
