json editor update

--- a/admin/index.html
+++ b/admin/index.html
@@ -23,8 +23,8 @@
                 <ul class="sidebar-menu" id="menuList">
                     <li class="header">Menu</li>
                     <li class="active">
-                        <a target="mainFrame" href="json-edit.html">
-                            <i class="fa fa-circle-o"></i> <span>JSON-Edit</span>
+                        <a target="mainFrame" href="json-editor.html">
+                            <i class="fa fa-circle-o"></i> <span>JSON-Editor</span>
                         </a>
                     </li>
                     <li>
@@ -41,7 +41,7 @@
             </section>
         </aside>
         <div class="content-wrapper">
-            <iframe src="json-edit.html" id="mainFrame" name="mainFrame" style="width:100%;min-height:500px;" scrolling="auto" frameborder="0"></iframe>
+            <iframe src="json-editor.html" id="mainFrame" name="mainFrame" style="width:100%;min-height:500px;" scrolling="auto" frameborder="0"></iframe>
         </div>
     </div>
 <script src="src/js/base.js"></script>
