--- a/admin/json-editor.html
+++ b/admin/json-editor.html
@@ -5,6 +5,7 @@
 <title>JSON-Edit</title>
 <link rel="stylesheet" href="src/css/main.css" />
 <link rel="stylesheet" href="src/css/jsoneditor.min.css" />
+<link rel="stylesheet" href="src/css/select2.min.css" />
 </head>
 <body class="skin-blue sidebar-mini">
 <div class="wrapper">
@@ -15,17 +16,8 @@
         <div class="content">
             <div class="box box-primary">
                 <div class="box-body">
-                    <div class="input-group form-group">
-                        <div class="input-group-addon selin">
-                            <select id="select">
-                                <option value="custom">custom</option>
-                                <option value="config">config</option>
-                            </select>
-                        </div>
-                        <input type="text" id="jsonUrl" class="form-control" placeholder="Enter file path (e.g. /mock/data/index.json)" />
-                        <div class="input-group-btn">
-                            <button type="button" id="load" class="btn btn-primary">load</button>
-                        </div>
+                    <div class="form-group">
+                        <select class="form-control" id="jsonFile">--</select>
                     </div>
                     <div id="jsoneditor"></div>
                 </div>
@@ -40,6 +32,7 @@
 <script src="src/js/base.js"></script>
 <script src="src/js/main.js"></script>
 <script src="src/js/jsoneditor.min.js"></script>
+<script src="src/js/select2.min.js"></script>
 <script>
 var container = document.getElementById('jsoneditor');
 var options = {
@@ -50,41 +43,50 @@ var options = {
     }
 };
 var editor = new JSONEditor(container,options);
-$('#load').on('click', function(){
-    $.get(jsonUrl.value, function(data){
+
+var getJson = function(path){
+    $.get(path, function(data){
         editor.set(data);
     }).error(function(){
         alert('Error. Please check the path');
     });
-});
+};
+
 $('#clear').on('click', function(){
     editor.set({});
 });
+
 $('#save').on('click', function(){
     var cont = JSON.stringify(editor.get());
-    if(!jsonUrl.value){
+    if(!jsonFile.value){
         alert('Path is empty!');
         return
     }
     $.post('/fsapi/savefile',{
-        path: jsonUrl.value,
+        path: jsonFile.value,
         cont: cont
     }, function(res){
         alert(res.msg);
     });
 });
-$('#select').on('change',function(){
-    switch(this.value){
-        case 'config':
-            jsonUrl.value = '/fsconfig.json';
-            $('#load').trigger('click');
-            break;
-        case 'custom':
-            jsonUrl.value = '';
-            editor.set({});
-            break;
+
+$.get('/fsapi/filelist?dir=mock&t='+(+new Date),function(ret){
+    var options = '<option>/fsconfig.json</option>';
+
+    if(ret.code == 200){
+        ret.data.forEach(function(v){
+            options += '<option>/mock/'+ v +'</option>';
+        });
+        jsonFile.innerHTML = options;
+        $('#jsonFile').select2().on('change',function(){
+            getJson(jsonFile.value);
+        });
+    }else{
+        alert(ret.msg);
     }
 });
+
+getJson('/fsconfig.json');
 </script>
 </body>
 </html>
