优化代码，增加常用工具

--- a/tools/index.html
+++ b/tools/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Mock Admin</title>
+<title>Ftl-suite Tools</title>
 <link rel="stylesheet" href="src/css/main.css" />
 </head>
 <body class="skin-blue sidebar-mini">
     <div class="wrapper">
         <header class="main-header">
             <a href="#" class="logo">
-                <span class="logo-mini">MA</span>
-                <span class="logo-lg">Mock Admink</span>
+                <span class="logo-mini">Tools</span>
+                <span class="logo-lg">Tools</span>
             </a>
             <nav class="navbar navbar-static-top">
                 <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
@@ -30,6 +30,16 @@
                     <li>
                         <a target="mainFrame" href="url-route.html">
                             <i class="fa fa-circle-o"></i> <span>URL-Route</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="/_tools/json2schema/">
+                            <i class="fa fa-circle-o"></i> <span>json2schema</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="/_tools/schema/">
+                            <i class="fa fa-circle-o"></i> <span>schema</span>
                         </a>
                     </li>
                 </ul>
