--- a/tools/schema/index.html
+++ b/tools/schema/index.html
@@ -83,7 +83,7 @@
                         <div class="box-footer">
                             <button type="button" id="loadJsonEditor" class="btn btn-success">Load json-editor</button>
                             <a target="_blank" href="demo.html" class="btn btn-primary">Schema Demo</a>
-                            <a target="_blank" href="/tools/json2schema/" class="btn btn-primary">json2schema</a>
+                            <a target="_blank" href="/_tools/json2schema/" class="btn btn-primary">json2schema</a>
                         </div>
                     </div>
                 </div>
